--- a/src/app/views/pages/agenda/calendar-edit/calendar-edit.component.html
+++ b/src/app/views/pages/agenda/calendar-edit/calendar-edit.component.html
@@ -6,19 +6,19 @@
   <form [formGroup]="form">
     <div class="flex flex-col">
       <mat-form-field>
-        <mat-label>Event Name</mat-label>
+        <mat-label>Nome do evento</mat-label>
         <input formControlName="title" matInput>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Start Date</mat-label>
+        <mat-label>Data Inicial</mat-label>
         <input [matDatepicker]="startDatepicker" formControlName="start" matInput>
         <mat-datepicker-toggle [for]="startDatepicker" matSuffix></mat-datepicker-toggle>
         <mat-datepicker #startDatepicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>End Date</mat-label>
+        <mat-label>Data Final</mat-label>
         <input [matDatepicker]="endDatepicker" formControlName="end" matInput>
         <mat-datepicker-toggle [for]="endDatepicker" matSuffix></mat-datepicker-toggle>
         <mat-datepicker #endDatepicker></mat-datepicker>
@@ -28,6 +28,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="flex justify-end">
-  <button mat-button mat-dialog-close>CANCEL</button>
-  <button (click)="save()" class="save" color="primary" mat-raised-button>SAVE</button>
+  <button mat-button mat-dialog-close>CANCELAR</button>
+  <button (click)="save()" class="save" color="primary" mat-raised-button>SALVAR</button>
 </mat-dialog-actions>
