--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -1,11 +1,6 @@
 <div class="form">
     <!-- Titulo do modal -->
-    <div
-        class="px-6 py-4 border-b"
-        id="title"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-    >
+    <div class="px-6 py-4 border-b" id="title" fxLayout="row" fxLayoutAlign="start center">
         <h2 class="title m-0">Novo Agendamento</h2>
     </div>
 
@@ -14,32 +9,20 @@
         <div [formGroup]="form" class="example-form">
             <!-- cliente -->
             <div class="cliente">
-                <mat-form-field
-                    class="example-full-width"
-                    id="inpN"
-                    appearance="standard"
-                >
+                <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                     <mat-label class="cliente">Cliente</mat-label>
                     <input formControlName="nomeCliente" matInput required />
-                    <mat-error
-                        *ngIf="form.get('nomeCliente').hasError('required')"
-                    >
+                    <mat-error *ngIf="form.get('nomeCliente').hasError('required')">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
             </div>
             <!-- serviço -->
             <div class="servico">
-                <mat-form-field
-                    class="example-full-width"
-                    id="inpN"
-                    appearance="standard"
-                >
+                <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                     <mat-label class="servico">Serviço</mat-label>
                     <input formControlName="nomeServico" matInput required />
-                    <mat-error
-                        *ngIf="form.get('nomeServico').hasError('required')"
-                    >
+                    <mat-error *ngIf="form.get('nomeServico').hasError('required')">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
@@ -49,18 +32,10 @@
             <div class="tempoEs">
                 <mat-form-field id="tempoEst" appearance="standard">
                     <mat-label>Tempo Estimado</mat-label>
-                    <input
-                        formControlName="tempoEstimado"
-                        type="text"
-                        matInput
-                        placeholder="Digite o Tempo"
-                        maxlength="3"
-                        required
-                    />
+                    <input formControlName="tempoEstimado" type="text" matInput placeholder="Digite o Tempo"
+                        maxlength="3" required />
                     <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                    <mat-error
-                        *ngIf="form.get('tempoEstimado').hasError('required')"
-                    >
+                    <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
@@ -68,12 +43,7 @@
                 <!-- valor -->
                 <mat-form-field id="categoria" appearance="standard">
                     <mat-label>Valor do Serviço</mat-label>
-                    <input
-                        matInput
-                        formControlName="valor"
-                        required
-                        placeholder="Ex. R$ 50,66"
-                    />
+                    <input matInput formControlName="valor" required placeholder="Ex. R$ 50,66" />
                     <mat-error *ngIf="form.get('valor').hasError('required')">
                         Selecione uma opção!
                     </mat-error>
@@ -84,33 +54,18 @@
             <div class="tempoEs">
                 <mat-form-field id="tempoEst" appearance="standard">
                     <mat-label>Data</mat-label>
-                    <input
-                        matInput
-                        [matDatepicker]="picker"
-                        formControlName="dtAtendimento"
-                    />
-                    <mat-datepicker-toggle
-                        matSuffix
-                        [for]="picker"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="picker" formControlName="dtAtendimento" />
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
-                    <mat-error
-                        *ngIf="form.get('dtAtendimento').hasError('required')"
-                    >
+                    <mat-error *ngIf="form.get('dtAtendimento').hasError('required')">
                         Preencha a data corretamente!
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field id="categoria" appearance="standard">
                     <mat-label>Hora</mat-label>
-                    <input
-                        matInput
-                        formControlName="hrAtendimento"
-                        placeholder="Ex. 12:30"
-                    />
-                    <mat-error
-                        *ngIf="form.get('hrAtendimento').hasError('required')"
-                    >
+                    <input matInput formControlName="hrAtendimento" placeholder="Ex. 12:30" />
+                    <mat-error *ngIf="form.get('hrAtendimento').hasError('required')">
                         Preencha o horário corretamente!
                     </mat-error>
                 </mat-form-field>
@@ -125,10 +80,9 @@
 
                 <mat-form-field id="categoria" appearance="standard">
                     <mat-label>Status</mat-label>
-                    <mat-select formControlName="status" required>
-                        <mat-option value="pendente">Pendente</mat-option>
-                        <mat-option value="aceito">Aceito</mat-option>
-                        <mat-option value="recusado">Recusado</mat-option>
+                    <mat-select formControlName="status" required (selectionChange)="responsavelObrigatorio($event)">
+                        <mat-option *ngFor="let status of opcoesStatus" value="{{ status.valor }}">{{ status.nome }}</mat-option>
+
                     </mat-select>
                     <mat-error *ngIf="form.get('status').hasError('required')">
                         Selecione uma opção!
@@ -140,12 +94,7 @@
     <!-- botoes adicionar e cancelar -->
     <mat-dialog-actions align="end">
         <button mat-button mat-dialog-close>Cancelar</button>
-        <button
-            mat-button
-            mat-raised-button
-            color="primary"
-            (click)="cadastrarEditarAgendamento()"
-        >
+        <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
             Adicionar
         </button>
     </mat-dialog-actions>
