--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -6,7 +6,7 @@ table {
 
 .pendente {
   background: rgb(252, 225, 104);
-  width: 85px;
+  width: 5.3rem;
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
@@ -16,7 +16,7 @@ table {
 
 .aceito {
   background: rgb(74, 197, 74);
-  width: 85px;
+  width: 5.3rem;
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
@@ -26,7 +26,7 @@ table {
 
 .recusado {
   background: rgb(255, 103, 103);
-  width: 85px;
+  width: 5.3rem;
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
