--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.scss
@@ -57,15 +57,13 @@
 
     .dado1 {
       display: flex;
-     
       width: 100%;
     }
 
     .dado2 {
       display: flex;
-      width: 20%;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
+      margin-top: -5%;
     }
 
     .dado3 {
