mudando um detalhe no css da exibição agendamento para desbugar a impossibilidade de clicar no editar

--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -45,15 +45,15 @@ th {
 }
 
 .aceito .mat-form-field-flex {
-  width: 55%;
+  width: 5.3rem;
 }
 
 .recusado .mat-form-field-flex {
-  width: 55%;
+  width: 5.3rem;
 }
 
 .pendente .mat-form-field-flex {
-  width: 55%;
+  width: 5.3rem;
 }
 
 
