--- a/src/app/views/pages/caixa/caixa.component.html
+++ b/src/app/views/pages/caixa/caixa.component.html
@@ -6,7 +6,7 @@
     </vex-page-layout-header>
     <vex-page-layout-content vexContainer>
         <div class="card">
-            <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
+            <mat-tab-group [(selectedIndex)]="tabSelected" (selectedTabChange)="trocaLegenda($event)">
                 <mat-tab label="Nova Venda">
                     <div class="p-6">
                         <vex-nova-venda></vex-nova-venda>
@@ -14,7 +14,7 @@
                 </mat-tab>
                 <mat-tab label="Fluxo de Caixa">
                     <div class="p-6">
-                        <vex-fluxo-caixa></vex-fluxo-caixa>
+                        <vex-fluxo-caixa (trocaTab)="trocaTab()"></vex-fluxo-caixa>
                     </div>
                 </mat-tab>
                 <mat-tab label="Histórico de vendas">
